# chatterbox

./: .gitignore  CLAUDE.md  NOTIFICATION_SETUP.md  README.md  SERVICE_README.md  chat.py  chatterbox.service  chatterbox_manager.py  com.chatterbox.notification-reader.plist  com.chatterbox.tts.plist  manage_notification_reader.sh  notification_reader.py  notification_speaker.py  notify_autostart.py  notify_chatterbox.py  pyproject.toml  requirements.txt  send_test_notification.sh  setup_summary.sh  start_service.sh  test_notification.py  test_service.py  tts_service.py
